--- a/Emo Quartet - semestralní práce/style.css
+++ b/Emo Quartet - semestralní práce/style.css
@@ -1,6 +1,6 @@
 /* shell */
 .tab1 {
-  background-image: url("Emo Quartet - semestralní práce/media/mcr-bg.png");
+  background-image: url("ProtivinskyVojtech/protivinskyvojtech.github.io/Emo Quartet - semestralní práce/media/mcr-bg.png");
   background-color: #F00;
 }
 
