--- a/Emo Quartet - semestralní práce/style.css
+++ b/Emo Quartet - semestralní práce/style.css
@@ -16,7 +16,9 @@
 }
 
 .tab3 div {
-
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to left,#000 35%,#00000000 100%);
 }
 
 
@@ -94,24 +96,39 @@ table {
   overflow-x: auto;
 }
 
+/* dicography */
 .discographyAlbumCover {
   height: 600px;
   margin-right: 50px;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+/* last page */
+.text {
+  color: #FFF;
+  font-size: 25px;
+  position: absolute;
+  margin-left: 60%;
+  margin-right: 5%;
+  margin-top: 5%;
 }
 
 /* Drop down menu  */
 .dropDown {
-  width : 500px; 
+  width : 500px;
   position: fixed;
+
   left: 0;
   top: 0;
 }
 
+.sbaricon {
+  width: 500px;
+}
+
 span {
   padding : 30px;
-  color : white;
-  font-size : 1.2em;
-  font-variant : small-caps;
   cursor : pointer;
   display: block;
 }
@@ -149,13 +166,11 @@ section {
   scroll-snap-align: start;
   scroll-snap-stop: always;
   display: flex;
-/*  align-items: center;
-  justify-content: center; */
 }
 
 body {
   margin: 0;
-  font-family: system-ui, sans-serif;
+  font-family:'Roboto', sans-serif;
 /*  font-size: 4rem; */
 }
 
