--- a/Emo-Quartet/style.css
+++ b/Emo-Quartet/style.css
@@ -251,19 +251,4 @@ body {
 #sp:hover {color: #1DB954; padding-left: 25px;}
 
 /* scroll bar */
-/* Firefox */
-* {
-  scrollbar-width: auto;
-  scrollbar-color: #424242 #ffffff00;
-}
-/* Chromium */
-*::-webkit-scrollbar {
-  width: 2px;
-}
-*::-webkit-scrollbar-track {
-  background: #ffffff00;
-}
-*::-webkit-scrollbar-thumb {
-  background-color: #424242;
-  border-radius: 2px;
-}
+::-webkit-scrollbar { display: none; }
